--- a/Content/uc_SV.tex
+++ b/Content/uc_SV.tex
@@ -127,27 +127,53 @@
 
 %====================================================
 \subsubsection{Hủy đăng ký buổi gặp mặt}
-\begin{longtable}{|p{3.5cm}|p{11cm}|}
+\begin{longtable}{|p{3.5cm}|p{10cm}|}
 \hline
 \textbf{Use Case ID} & UC-11 \\ \hline
 \textbf{Use Case Name} & Hủy đăng ký buổi gặp mặt \\ \hline
-\textbf{Description} & Cho phép sinh viên hủy buổi tư vấn, lịch hẹn đã đăng ký với tutor khi có thay đổi trong lịch trình hoặc không thể tham gia. \\ \hline
+\textbf{Description} & Cho phép sinh viên hủy buổi tư vấn hoặc lịch hẹn đã đăng ký với tutor khi có thay đổi trong lịch trình hoặc không thể tham gia. \\ \hline
 \textbf{Trigger} & Sinh viên chọn chức năng “Hủy đăng ký buổi gặp mặt”. \\ \hline
 \textbf{Primary Actor} & Sinh viên \\ \hline
 \textbf{Secondary Actor} & Tutor \\ \hline
 \textbf{Pre-condition} & - Sinh viên đã đăng nhập. \newline - Sinh viên đã đăng ký buổi gặp mặt. \newline - Buổi gặp mặt chưa bắt đầu. \\ \hline
-\textbf{Post-condition} & - Hủy thành công, hệ thống cập nhật slot. \newline - Sinh viên nhận thông báo hủy. \\ \hline
+\textbf{Post-condition} & - Hủy thành công, hệ thống cập nhật slot và thêm lại khung giờ vào lịch rảnh của tutor. \newline - Sinh viên nhận thông báo hủy. \\ \hline
 \textbf{Normal flow} & 
-1. Sinh viên chọn “Hủy đăng ký”. \newline
-2. Hệ thống hiển thị danh sách buổi gặp mặt. \newline
+1. Sinh viên chọn “Buổi gặp mặt của tôi”. \newline
+2. Hệ thống hiển thị danh sách buổi gặp mặt đã đăng ký. \newline
 3. Sinh viên chọn buổi muốn hủy. \newline
-4. Hệ thống yêu cầu xác nhận. \newline
-5. Sinh viên xác nhận. \newline
-6. Hệ thống kiểm tra thời gian. \newline
-7. Hệ thống gửi thông báo “Hủy thành công”. \\ \hline
+4. Hệ thống yêu cầu sinh viên nhập lý do hủy. \newline
+5. Sinh viên nhập lý do. \newline
+6. Hệ thống yêu cầu xác nhận hủy. \newline
+7. Sinh viên xác nhận. \newline
+8. Hệ thống kiểm tra thời gian và hủy buổi gặp mặt. \newline
+9. Hệ thống gửi thông báo “Hủy thành công”. \\ \hline
 \textbf{Alternative flow} & 
-2a. Không có buổi gặp mặt đã đăng ký → Hệ thống hiển thị “Không có buổi gặp mặt nào”. \newline
-6a. Buổi gặp mặt đã bắt đầu → Hệ thống hiển thị “Không thể hủy vì buổi gặp mặt đã bắt đầu”. \\ \hline
+2a. Không có buổi gặp mặt đã đăng ký. Hệ thống hiển thị “Không có buổi gặp mặt nào”. \newline
+6a. Sinh viên hủy thao tác hủy. Hệ thống quay lại danh sách buổi gặp mặt. \newline
 \textbf{Exception flow} & 
-- Lỗi hệ thống hoặc mất kết nối → Hệ thống hiển thị “Không thể hủy, vui lòng thử lại sau”. \\ \hline
+- Lỗi hệ thống hoặc mất kết nối. Hệ thống hiển thị “Không thể hủy, vui lòng thử lại sau”. \\ \hline
+\end{longtable}
+%====================================================
+
+
+\subsubsection{Xem danh sách buổi gặp mặt của sinh viên}
+\begin{longtable}{|p{3.5cm}|p{11cm}|}
+\hline
+\textbf{Use Case ID} & UC-12 \\ \hline
+\textbf{Use Case Name} & Xem danh sách buổi gặp mặt của sinh viên \\ \hline
+\textbf{Description} & Cho phép sinh viên xem danh sách các buổi gặp mặt (sessions) mà mình đã đặt lịch hẹn, bao gồm thông tin giảng viên, thời gian, trạng thái buổi và chủ đề tư vấn. \\ \hline
+\textbf{Trigger} & Sinh viên chọn chức năng “Xem danh sách buổi gặp” trong hệ thống. \\ \hline
+\textbf{Primary Actor} & Sinh viên \\ \hline
+\textbf{Secondary Actor} & Tutor \\ \hline
+\textbf{Pre-condition} & - Sinh viên đã đăng nhập thành công. \newline - Hệ thống có ít nhất một buổi hẹn đã đăng ký thành công. \\ \hline
+\textbf{Post-condition} & - Danh sách buổi gặp được hiển thị đầy đủ. \newline - Sinh viên có thể thực hiện hành động liên quan (xem chi tiết, hủy nếu cần). \\ \hline
+\textbf{Normal flow} & 
+1. Sinh viên truy cập chức năng “Xem danh sách buổi gặp”. \newline
+2. Hệ thống hiển thị danh sách các buổi gặp (thời gian, giảng viên, trạng thái, chủ đề). \newline
+3. Sinh viên chọn một buổi để xem chi tiết. \\ \hline
+\textbf{Alternative flow} & 
+2a. Không có buổi gặp nào. Hệ thống thông báo “Danh sách trống” và quay về màn hình chính. \newline
+3a. Sinh viên hủy thao tác xem chi tiết. Hệ thống quay lại danh sách buổi gặp. \\ \hline
+\textbf{Exception flow} & 
+- Lỗi hệ thống hoặc mất kết nối. Hệ thống thông báo lỗi và yêu cầu sinh viên thử lại sau. \\ \hline
 \end{longtable}
