ac &seq thietlaplichranh

--- a/main.tex
+++ b/main.tex
@@ -392,6 +392,8 @@ Xem rõ hơn \href{https://drive.google.com/file/d/1OBO3KzPEBzUu60808emp18U4jJLK
 \subsubsection{Quên mật khẩu}
 \input{Content/diagram_QuenMK}
 
+\subsection{Thiết lập lịch rảnh}
+\input{Content/diagram_thietlaplichranh}
 \subsubsection{Đặt lịch hẹn}
 \input{Content/diagram_DatLichHen}
 
